tests/sketchy_variants/sketchy_variants.exp
Error -------------------------------------------------------------- test.js:5:5

Sketchy null check on boolean which is potentially false. Perhaps you meant to
check for null or undefined? (`sketchy-null-bool`)

Error: test.js:5
  5: if (x){}
         ^ Sketchy null check on boolean [1] which is potentially false. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-bool`)
  References:
    2: var x: bool|mixed|number|string = null
              ^^^^ [1]: boolean
    2: var x: bool|mixed|number|string = null
                   ^^^^^ [2]: null or undefined

Error -------------------------------------------------------------- test.js:5:5

Sketchy null check on mixed which is potentially false. Perhaps you meant to
check for null or undefined? (`sketchy-null-mixed`)

Error: test.js:5
  5: if (x){}
         ^ Sketchy null check on mixed [1] which is potentially false. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-mixed`)
  References:
    2: var x: bool|mixed|number|string = null
                   ^^^^^ [1]: mixed
    2: var x: bool|mixed|number|string = null
                   ^^^^^ [2]: null or undefined

Error -------------------------------------------------------------- test.js:5:5

Sketchy null check on number which is potentially 0. Perhaps you meant to check
for null or undefined? (`sketchy-null-number`)

Error: test.js:5
  5: if (x){}
         ^ Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-number`)
  References:
    2: var x: bool|mixed|number|string = null
                         ^^^^^^ [1]: number
    2: var x: bool|mixed|number|string = null
                   ^^^^^ [2]: null or undefined

Error -------------------------------------------------------------- test.js:5:5

Sketchy null check on string which is potentially an empty string. Perhaps you
meant to check for null or undefined? (`sketchy-null-string`)

Error: test.js:5
  5: if (x){}
         ^ Sketchy null check on string [1] which is potentially an empty string. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-string`)
  References:
    2: var x: bool|mixed|number|string = null
                                ^^^^^^ [1]: string
    2: var x: bool|mixed|number|string = null
                   ^^^^^ [2]: null or undefined

Error -------------------------------------------------------------- test.js:9:5

Sketchy null check on mixed which is potentially false. Perhaps you meant to
check for null or undefined? (`sketchy-null-mixed`)

Error: test.js:9
  9: if (x){}
         ^ Sketchy null check on mixed [1] which is potentially false. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-mixed`)
  References:
    2: var x: bool|mixed|number|string = null
                   ^^^^^ [1]: mixed
    2: var x: bool|mixed|number|string = null
                   ^^^^^ [2]: null or undefined

Error -------------------------------------------------------------- test.js:9:5

Sketchy null check on number which is potentially 0. Perhaps you meant to check
for null or undefined? (`sketchy-null-number`)

Error: test.js:9
  9: if (x){}
         ^ Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-number`)
  References:
    2: var x: bool|mixed|number|string = null
                         ^^^^^^ [1]: number
    2: var x: bool|mixed|number|string = null
                   ^^^^^ [2]: null or undefined

Error -------------------------------------------------------------- test.js:9:5

Sketchy null check on string which is potentially an empty string. Perhaps you
meant to check for null or undefined? (`sketchy-null-string`)

Error: test.js:9
  9: if (x){}
         ^ Sketchy null check on string [1] which is potentially an empty string. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-string`)
  References:
    2: var x: bool|mixed|number|string = null
                                ^^^^^^ [1]: string
    2: var x: bool|mixed|number|string = null
                   ^^^^^ [2]: null or undefined

Error ------------------------------------------------------------- test.js:13:5

Sketchy null check on boolean which is potentially false. Perhaps you meant to
check for null or undefined? (`sketchy-null-bool`)

Error: test.js:13
 13: if (x){}
         ^ Sketchy null check on boolean [1] which is potentially false. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-bool`)
  References:
    2: var x: bool|mixed|number|string = null
              ^^^^ [1]: boolean
    2: var x: bool|mixed|number|string = null
                   ^^^^^ [2]: null or undefined

Error ------------------------------------------------------------- test.js:13:5

Sketchy null check on number which is potentially 0. Perhaps you meant to check
for null or undefined? (`sketchy-null-number`)

Error: test.js:13
 13: if (x){}
         ^ Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-number`)
  References:
    2: var x: bool|mixed|number|string = null
                         ^^^^^^ [1]: number
    2: var x: bool|mixed|number|string = null
                   ^^^^^ [2]: null or undefined

Error ------------------------------------------------------------- test.js:13:5

Sketchy null check on string which is potentially an empty string. Perhaps you
meant to check for null or undefined? (`sketchy-null-string`)

Error: test.js:13
 13: if (x){}
         ^ Sketchy null check on string [1] which is potentially an empty string. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-string`)
  References:
    2: var x: bool|mixed|number|string = null
                                ^^^^^^ [1]: string
    2: var x: bool|mixed|number|string = null
                   ^^^^^ [2]: null or undefined

Error ------------------------------------------------------------- test.js:17:5

Sketchy null check on boolean which is potentially false. Perhaps you meant to
check for null or undefined? (`sketchy-null-bool`)

Error: test.js:17
 17: if (x){}
         ^ Sketchy null check on boolean [1] which is potentially false. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-bool`)
  References:
    2: var x: bool|mixed|number|string = null
              ^^^^ [1]: boolean
    2: var x: bool|mixed|number|string = null
                   ^^^^^ [2]: null or undefined

Error ------------------------------------------------------------- test.js:17:5

Sketchy null check on mixed which is potentially false. Perhaps you meant to
check for null or undefined? (`sketchy-null-mixed`)

Error: test.js:17
 17: if (x){}
         ^ Sketchy null check on mixed [1] which is potentially false. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-mixed`)
  References:
    2: var x: bool|mixed|number|string = null
                   ^^^^^ [1]: mixed
    2: var x: bool|mixed|number|string = null
                   ^^^^^ [2]: null or undefined

Error ------------------------------------------------------------- test.js:17:5

Sketchy null check on string which is potentially an empty string. Perhaps you
meant to check for null or undefined? (`sketchy-null-string`)

Error: test.js:17
 17: if (x){}
         ^ Sketchy null check on string [1] which is potentially an empty string. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-string`)
  References:
    2: var x: bool|mixed|number|string = null
                                ^^^^^^ [1]: string
    2: var x: bool|mixed|number|string = null
                   ^^^^^ [2]: null or undefined

Error ------------------------------------------------------------- test.js:21:5

Sketchy null check on boolean which is potentially false. Perhaps you meant to
check for null or undefined? (`sketchy-null-bool`)

Error: test.js:21
 21: if (x){}
         ^ Sketchy null check on boolean [1] which is potentially false. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-bool`)
  References:
    2: var x: bool|mixed|number|string = null
              ^^^^ [1]: boolean
    2: var x: bool|mixed|number|string = null
                   ^^^^^ [2]: null or undefined

Error ------------------------------------------------------------- test.js:21:5

Sketchy null check on mixed which is potentially false. Perhaps you meant to
check for null or undefined? (`sketchy-null-mixed`)

Error: test.js:21
 21: if (x){}
         ^ Sketchy null check on mixed [1] which is potentially false. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-mixed`)
  References:
    2: var x: bool|mixed|number|string = null
                   ^^^^^ [1]: mixed
    2: var x: bool|mixed|number|string = null
                   ^^^^^ [2]: null or undefined

Error ------------------------------------------------------------- test.js:21:5

Sketchy null check on number which is potentially 0. Perhaps you meant to check
for null or undefined? (`sketchy-null-number`)

Error: test.js:21
 21: if (x){}
         ^ Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-number`)
  References:
    2: var x: bool|mixed|number|string = null
                         ^^^^^^ [1]: number
    2: var x: bool|mixed|number|string = null
                   ^^^^^ [2]: null or undefined

Error ------------------------------------------------------------- test.js:27:5

Sketchy null check on boolean which is potentially false. Perhaps you meant to
check for null or undefined? (`sketchy-null-bool`)

Error: test.js:27
 27: if (x){}
         ^ Sketchy null check on boolean [1] which is potentially false. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-bool`)
  References:
    2: var x: bool|mixed|number|string = null
              ^^^^ [1]: boolean
    2: var x: bool|mixed|number|string = null
                   ^^^^^ [2]: null or undefined

Error ------------------------------------------------------------- test.js:31:5

Sketchy null check on mixed which is potentially false. Perhaps you meant to
check for null or undefined? (`sketchy-null-mixed`)

Error: test.js:31
 31: if (x){}
         ^ Sketchy null check on mixed [1] which is potentially false. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-mixed`)
  References:
    2: var x: bool|mixed|number|string = null
                   ^^^^^ [1]: mixed
    2: var x: bool|mixed|number|string = null
                   ^^^^^ [2]: null or undefined

Error ------------------------------------------------------------- test.js:35:5

Sketchy null check on number which is potentially 0. Perhaps you meant to check
for null or undefined? (`sketchy-null-number`)

Error: test.js:35
 35: if (x){}
         ^ Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-number`)
  References:
    2: var x: bool|mixed|number|string = null
                         ^^^^^^ [1]: number
    2: var x: bool|mixed|number|string = null
                   ^^^^^ [2]: null or undefined

Error ------------------------------------------------------------- test.js:39:5

Sketchy null check on string which is potentially an empty string. Perhaps you
meant to check for null or undefined? (`sketchy-null-string`)

Error: test.js:39
 39: if (x){}
         ^ Sketchy null check on string [1] which is potentially an empty string. Perhaps you meant to check for null or undefined [2]? (`sketchy-null-string`)
  References:
    2: var x: bool|mixed|number|string = null
                                ^^^^^^ [1]: string
    2: var x: bool|mixed|number|string = null
                   ^^^^^ [2]: null or undefined


Found 20 errors
